plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'com.goti'
    version = '0.0.1-SNAPSHOT'
    description = 'KT-TECHUP_Integration_Goti_project'

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.annotationProcessorPath = configurations.annotationProcessor
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    dependencyManagement {
        imports {
            // CVE 수정: GHSA-72hv-8253-57qq (jackson-core async parser DoS)
            // BOM으로 jackson 전체 모듈 버전 통일 (core, databind, annotations, datatype 등)
            mavenBom 'com.fasterxml.jackson:jackson-bom:2.21.1'
        }
        dependencies {
            // CVE 수정: CVE-2025-48924 (commons-lang3)
            dependency 'org.apache.commons:commons-lang3:3.18.0'
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        /* QueryDSL — OpenFeign fork (CVE-2024-49203 수정) */
        implementation 'io.github.openfeign.querydsl:querydsl-jpa:5.6.1:jakarta'

        annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:5.6.1:jakarta'
        annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
        annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

        /* Test Module Lombok */
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
    }

    tasks.named('test') {
        useJUnitPlatform()
        workingDir = rootProject.projectDir
    }

    // -Pmsa: bootJar 활성화 (도메인 모듈을 독립 서비스로 빌드)
    // jar는 항상 활성화 (모듈 간 의존성 해결에 필수: ticketing → stadium 등)
    plugins.withId('org.springframework.boot') {
        def msa = project.hasProperty('msa')
        tasks.named('bootJar') { enabled = msa }
        tasks.named('jar') { enabled = true }
    }
}